--- a/src/components/Card/CardCSS.module.css
+++ b/src/components/Card/CardCSS.module.css
@@ -13,7 +13,7 @@
   border-radius: 4px;
 }
 
-#editDeleteContainer {
+.editDeleteContainer {
   position: absolute;
   flex-direction: row;
   right: 5px;
