loadingImage gif centered with PS

--- a/src/components/Error/ErrorCSS.module.css
+++ b/src/components/Error/ErrorCSS.module.css
@@ -4,7 +4,6 @@
   position: fixed;
   height: 100vh;
   width: 100vw;
-  /* minHeight: smaPort || smaLand ? none : 530px; */
   z-index: -1
 }
 
@@ -21,30 +20,24 @@
 }
 
 .errorGif {
-  /* ...relative; ...noSelect; ...flex; */
-  /* visibility: loaded ? visible : hidden; */
-  /* width: smaPort ? 65vw : smaLand ? 50vh : medPort || medLand ? 300px : 400px; */
-  /* height: smaPort ? 65vw : smaLand ? 50vh : medPort || medLand ? 300px : 400px; */
+  display: flex;
+  position: relative
 }
 
 .placeholderAnimation {
-  /* ...noSelect; ...relative; */
-  /* display: loaded ? none : flex; */
-  /* marginTop: smaPort ? -65vw : smaLand ? -50vh : medPort || medLand ? -300px : -400px; */
-  /* width: smaPort ? 65vw : smaLand ? 50vh : medPort || medLand ? 300px : 400px; */
-  /* height: smaPort ? 65vw : smaLand ? 50vh : medPort || medLand ? 300px : 400px; */
+  position: relative;
   z-index: 1001;
-  animation: error .8s linear infinite;
-  animation-timing-function: steps(12, end);
-  @keyframes error {
-    0% { transform: rotate(0deg) };
-    100% { transform: rotate(360deg) };
-  }
+  animation: error .8s steps(12, end) infinite;
+}
+
+@keyframes error {
+  0% { transform: rotate(0deg) }
+  100% { transform: rotate(360deg) }
 }
 
 .message {
-  /* ...flex; ...relative; ...noSelect; */
+  display: flex;
+  position: relative;
   color: antiquewhite;
   text-shadow: 0px 0px 10px black;
-  /* font-size: smaPort ? 7vw : smaLand ? 5.5vh : medPort || medLand ? 31px : 35px; */
 }
