--- a/src/commons/commonsCSS.module.css
+++ b/src/commons/commonsCSS.module.css
@@ -14,3 +14,6 @@
 .noDeco {
   text-decoration: 'none'
 }
+
+/* export const mix = { mixBlendMode: 'difference' } */
+/* export const pointer = { cursor: 'pointer' } */
