--- a/src/components/GoogleAuth/GoogleAuthCSS.module.css
+++ b/src/components/GoogleAuth/GoogleAuthCSS.module.css
@@ -5,7 +5,7 @@
   margin-right: 16px;
   margin-top: 16px;
   flex-direction: row;
-  z-index: 3
+  z-index: 4
 }
 
 .buttonIn {
@@ -34,7 +34,8 @@
   white-space: nowrap;
   overflow: hidden;
   justify-content: flex-start;
-  padding: 0px 6px !important;
+  /* padding: 0px 6px !important; */
+  padding: 2px 6px 0px 3px!important;
 }
 
 .buttonWidthHelper {
