--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
+  /* display: flex;
+  width: 100%;
+  position: fixed; */
   margin: 0;
-  height: 100vh;
+  /* height: 100%; */
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
