--- a/src/components/Detail/DetailCSS.module.css
+++ b/src/components/Detail/DetailCSS.module.css
@@ -1,46 +1,25 @@
 .container {
   /* background: darkolivegreen; */ /* DEV */
-  /* margin-left: 101px; */
-  /* margin-right: 101px; */
   display: flex;
   position: relative;
   justify-content: center;
-  /* width: 100vw; */
-  /* min-width: 400px; */
-  /* width: 100vw; */
   margin-top: 100px;
   margin-left: 16px;
   z-index: 1;
-  
-  /* width: min(100vw, 400px); */
-
-
-  /* margin-left: 0px;  
-  min-width: 800px; */
 
 }
-
-/* .background {
-  background: red;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-self: center;
-} */
 
 .card {
   /* background: red; */ /* DEV */
   display: flex;
   position: relative;
-  align-items: center;
   flex-direction: column;
-  padding: 16px !important;
-  /* min-width: 300px; */
-  max-width: 750px;
-  /* width: 55vw; */
-  /* padding: 18px; */
+  align-items: center;
   align-self: center;
+  padding: 16px !important;
+  max-width: 750px;
   margin-top: 16px;
+  margin-bottom: 16px;
 
   background: linear-gradient(135deg, rgba(64, 117, 117, 0.1), rgba(64, 117, 117, 0));
   -webkit-backdrop-filter: blur(20px);
