--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   position: fixed; */
   margin: 0;
   /* height: 100%; */
-  width: 100vw;
+  /* width: 100vw; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
