--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
+/* html { 
+  height: 100%;
+  overflow:auto;
+  width: 100%;
+} */
+
+
 body {
   /* display: flex;
   width: 100%;
   position: fixed; */
   margin: 0;
-  /* height: 100%; */
+  height: 100%;
+  width: 100%;
   /* width: 100vw; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
