--- a/src/components/Detail/DetailCSS.module.css
+++ b/src/components/Detail/DetailCSS.module.css
@@ -11,6 +11,7 @@
 
 .card {
   /* background: red; */ /* DEV */
+  width: 100% !important;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -30,7 +31,6 @@
 
 #editDeleteContainer {
   position: absolute;
-  flex-direction: column;
   right: 5px;
   top: 5px;
 }
@@ -44,6 +44,7 @@
   min-height: 30px !important;
   height: 30px !important;
   margin-bottom: 5px;
+  margin-left: 5px !important;
 }
 
 .iconEdit {
@@ -66,18 +67,26 @@
   -ms-user-select: none !important;
   user-select: none !important;
   display: flex;
+  /* max-width: 400px; */
   width: 400px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
+  /* width: 365px; */
   height: 260px;
+  /* margin-top: 0px; */
   margin-bottom: 16px;
 }
 
 .text {
-  -webkit-touch-callout: none !important;
+  /* -webkit-touch-callout: none !important;
   -webkit-user-select: none !important;
   -khtml-user-select: none !important;
   -moz-user-select: none !important;
   -ms-user-select: none !important;
-  user-select: none !important;
+  user-select: none !important; */
+  /* background: lightblue; */ /* DEV */
+  overflow-wrap: anywhere;
+  width: 100%;
   font-size: 18px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-decoration: none;
@@ -153,38 +162,46 @@
   /* width: 50vw; */
 }
 
-.errorCard {
+.button {
+  min-width: 122px;
+  width: 122px;
+  height: 36.5px;
+  background: #859e7d !important;
+  color: antiquewhite !important;
+  align-self: center;
+}
+
+.button:hover { background: #7b9174 !important }
+
+.backgroundError {
+  /* background: darkred; */ /* DEV */
+  width: 100vw;
+  height: calc(100vh - 100px);
+  top: 100px;
   display: flex;
-  position: fixed;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  /* min-height: 310px; */
+  min-height: 210px;
+}
+
+.errorCard {
+  /* background: darkgreen; */ /* DEV */
+  display: flex;
+  position: relative;
   flex-direction: column;
   color: antiquewhite;
   width: 55vw;
   height: 150px;
   padding: 18px;
   align-items: center;
-  align-self: center;
   justify-content: space-evenly;
-  background: linear-gradient(135deg, rgba(64, 117, 117, 0.1), rgba(64, 117, 117, 0));
+  text-align: center;
+
+  /* background: linear-gradient(135deg, rgba(64, 117, 117, 0.1), rgba(64, 117, 117, 0));
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-  border: 1px solid rgb(255, 255, 255, 0.18);
-}
-
-.button {
-  min-width: 122px;
-  width: 122px;
-  height: 36.5px;
-  background: #859e7d;
-  :hover { background: #7b9174 };
-  color: antiquewhite;
-  align-self: center;
-}
-
-.backgroundError {
-  display: flex;
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
+  border: 1px solid rgb(255, 255, 255, 0.18); */
 }
