--- a/src/components/NavBar/NavBarCSS.module.css
+++ b/src/components/NavBar/NavBarCSS.module.css
@@ -36,14 +36,20 @@
 }
 
 .selectsAndButtons {
-  /* background: gray; */
+  background: gray; /* DEV */
   display: flex;
+  /* display: none !important; */
   flex-direction: column;
   /* min-width: 570px; */
-  width: 95vw;
+  min-width: 457px;
+  /* width: 95vw; */
+  width: 100%;
   height: 100px;
   align-items: center;
+  /* margin-right: 132.5px; */ /*  132.5 ===  "8" 64 8 36.5 16 */
+  /* margin-right: unset; */
   align-self: center;
+  /* z-index: 40000 !important; */
 }
 
 .logo {
@@ -105,7 +111,7 @@
 .input {
   height: 35px;
   background: yellow;
-  border-radius: 4px;
+  border-radius: 4px !important;
  /*  :fieldset {
     border: '2px solid rgb(190, 190, 174)',
   } */
@@ -133,22 +139,40 @@
   background: #FFFFFF
 }
 
-.labelHealth {
+.labelHealthOrAlpha {
+  background: #FFFFFF !important;
   border-radius: 4px 4px 0px 0px ;
+  /* margin: 0px !important; */
   margin-left: -8px;
   margin-top: -3px;
+  max-width: calc(133% - 20px) !important;
+  /* border-radius: 4px !important; */
 }
 
 .labelAlpha {
-  background: '#FFFFFF !important';
-  border-radius: '4px 4px 0px 0px ';
-  margin-left: '-8px';
-  margin-top: '-3px';
+  background: #FFFFFF !important;
+  border-radius: 4px 4px 0px 0px;
+  margin-left: -8px;
+  margin-top: -3px;
+  max-width: calc(133% - 20px) !important;
 }
 
 
-.selectDietsHealthAlpha {
-  width: 11vw;
+.containerDietsDishesHealthAlpha {
+  border-radius: 4px;
+  width: 23% !important;
+  height: 35px;
+  background: #FFFFFF;
+  /* background: red !important; */
+  :fieldset {
+    border: 2px solid red !important;
+    background: red !important;
+    color: red !important
+  }
+}
+
+.selectWithLabel {
+  width: 100% !important;
   height: 35px;
   background: #FFFFFF;
   /* background: red !important; */
@@ -163,17 +187,26 @@
   background: red; /* DEV */
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  min-width: 457px;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  height: 50px !important;
   align-items: center;
+  justify-content: space-between;
 }
 
 .lower {
-  background: blue; /* DEV */
+  width: 100%;
+  min-width: 457px;
+  background: lightslategray; /* DEV */
   display: flex;
   flex-direction: row;
+  /* justify-content: space-between; */
+  /* align-content: center; */
+  /* align-items: flex-end; */
+  height: 50px !important;
+  align-items: center;
   justify-content: space-between;
-  align-content: center;
-  align-items: flex-end;
 }
 
 .menuButton {
