--- a/src/components/Landing/LandingCSS.module.css
+++ b/src/components/Landing/LandingCSS.module.css
@@ -1,3 +1,16 @@
+.background {
+  /* display: flex; */
+  position: absolute;
+  z-index: 40000;
+  /* overflow: hidden !important; */
+}
+
+
+/* .body {
+  overflow-x: hidden !important;
+}
+ */
+
 .bgImg {
   display: flex;
   position: absolute;
@@ -9,7 +22,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-image: url("../images/landingBG.jpg");
+  background-image: url("../../images/landingBG.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   filter: blur(3px);
@@ -41,16 +54,16 @@
   padding-top: 0.1%;
   align-items: center;
   margin-top: 0.9%;    
-  background-color: rgba(139, 0, 139, 0.285);
+  background: rgba(139, 0, 139, 0.285) !important;
   border-color: aliceblue;
   color: beige;
   font-style: oblique;
-  border-style :solid;
-  border-width: 2px;
+  /* border-style :solid; */
+  /* border-width: 2px; */
   width: 110px;
   height: 35px;
   margin-left: 30px;
-  border-radius: 15%;
+  /* border-radius: 15%; */
   font-size: 1rem;
   z-index: 2;
 }
