--- a/src/components/NavBar/NavBarCSS.module.css
+++ b/src/components/NavBar/NavBarCSS.module.css
@@ -9,6 +9,7 @@
   background-size: 100vw; */
   /* z-index: 2000; */
   z-index: 3;
+  /* overflow: hidden !important; */
   /* border: 10px solid red; */
 }
 
@@ -28,7 +29,7 @@
   flex-direction: row;
   /* min-width: 200px;
   width: 200px; */
-  min-height: 69px;
+  /* min-height: 69px; */
   height: 69px;
   justify-content: flex-end;
   align-items: center;
